--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "firebase-admin": "^13.2.0",
+    "moment": "^2.30.1",
     "mongoose": "^8.9.4",
     "nodemon": "^3.1.9"
   }
